Dispose temporary Range in Selection::collapse

That is neither cached nor exposed to js.

BUG=693975

Review-Url: https://codereview.chromium.org/2760273002
Cr-Commit-Position: refs/heads/master@{#458622}

Former-commit-id: 9608ef8b7480c2d5d86afde8726c0bfbcfb47c7b